Переписан раздел про протоколы распространения ключей на симметричных шифрах

--- a/kerberos.tex
+++ b/kerberos.tex
@@ -1,4 +1,4 @@
-\section{Система Kerberos для локальной сети}
+\section{Система Kerberos для локальной сети}\label{section-kerberos}
 \selectlanguage{russian}
 
 Система аутентификации и распределения ключей Kerberos основана на протоколе Нидхема~---~Шрёдера. Самые известные реализации протокола Kerberos включены в Microsoft Active Directory и ПО Kerberos с открытым кодом для Unix.
