--- a/key_distribution_protocols.tex
+++ b/key_distribution_protocols.tex
@@ -1,88 +1,26 @@
 \chapter{Распространение ключей}\index{протокол!распространения ключей}\label{chapter-key-distribution-protocols}
 \selectlanguage{russian}
 
-Задачей распространения ключей между двумя пользователями является создание секретных псевдослучайных сеансовых ключей шифрования и аутентификации сообщений. Пользователи предварительно создают и обмениваются ключами аутентификации один раз. В дальнейшем для создания защищённой связи пользователи производят взаимную аутентификацию и вырабатывают сеансовые ключи\index{ключ!сеансовый}.
+Задача распространения ключей является одной из множества задач построения надёжной сети общения многих абонентов. Задача состоит в получении в нужный момент времени двумя легальными абонентами сети секретного сессионного ключа шифрования (и аутентификации сообщений). Хорошим решением данной задачи будем считать такой протокол распространения ключей, который удовлетворяет следующим условиям.
 
-\section{Симметричные протоколы}
+\begin{itemize}
+	\item В результате работы протокола должен между двумя абонентами должны быть сформирован секретный сессионный ключ.
+	\item Успешное окончание работы протокола распространение ключей должно означать успешную взаимную аутентификацию абонентов. Не должно быть такого, что протокол успешно завершился с точки зрения одной из сторон, а вторая сторона при этом представлена злоумышленником.
+	\item К участию в работе протокола должны допускаться только легальные пользователи сети. Внешний пользователь не должен иметь возможность получить общий сессионный ключ с кем-либо из абонентов.
+	\item Добавление нового абонента в сеть (или исключение из неё) не должно требовать уведомления всех участников сети.
+\end{itemize}
 
-\subsection{Аутентификация и атаки воспроизведения}
+Последнее требование сразу исключает такие варианты протоколов, в которых каждый из абонентов знал бы некоторый мастер-ключ общения с любым другим участником. Данные варианты плохи тем, что с ростом системы количество пар мастер-ключей <<абонент-абонент>> растёт как квадрат от количества участников. Поэтому большая часть рассматриваемых решений состоит в том, что в сети выделяется один или несколько доверенных центров T (\langen{Trent}, от \langen{trust}), которые как раз и владеют информацией о всех легальных участниках сети и их ключах. Они же будут явно или неявно выступать одним из участников протоколов по формированию сеансовых ключей.
 
-Рассмотрим такую ситуацию: обе стороны $A$ и $B$ имеют общий долговременный ключ $K_{AB}$ и симметричную систему шифрования. Нужно выработать сеансовый секретный ключ $K$. Сторона $A$ создаёт ключ $K$ и желает его передать стороне $B$.
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=0.8\textwidth]{pic/key_distribution-networks}
+    \caption{Варианты сетей без выделенного доверенного центра и с выделенным доверенным центром T\label{fig:key_distribution-networks}}
+\end{figure}
 
-\begin{enumerate}
-    \item Для этого сторона $A$ с помощью общего ключа $K_{AB}$ создаёт и передаёт $B$ шифрованное сообщение:
-            \[ A \rightarrow B: ~ E_{K_{AB}}(K, B, A). \]
-        В этом сообщении имеются так называемые поля -- $(B,A)$ -- информация для дополнительного подтверждения.
-    \item Сторона $B$, используя общий ключ $K_{AB}$, расшифровывает полученное сообщение:
-            \[ D_{K_{AB}}( E_{K_{AB}}( K, B, A)) = (K, B, A). \]
-        В результате сторона $B$ получает сеансовый ключ $K$ и дополнительные данные $(B,A)$.
-\end{enumerate}
+Важным моментом при анализе решений данной задачи является то, что сессионные ключи, вырабатываемые в конкретный момент времени, являются менее надёжными, чем мастер-ключи, используемые для генерации сессионных. В частности, нужно предполагать, что хотя злоумышленник не может получить сессионный ключ во время общения абонентов, он может сделать это по прошествии некоторого времени (дни, недели, месяцы). И хотя знание этого сессионного ключа поможет злоумышленнику расшифровать старые сообщения, он не должен иметь возможность организовать новую сессию с использованием уже известного ему сессионного ключа.
 
-Недостаток этого протокола состоит в том, что криптоаналитик может перехватывать сообщения и через некоторое время пересылать их стороне $A$.
-
-Рассмотрим другие варианты решения задачи о передаче сеансового ключа.
-Задача остаётся прежней: обе стороны $A$ и $B$ имеют общий долговременный секретный ключ $K_{AB}$, сторона $A$ должна выработать сеансовый секретный ключ $K$ и доставить его стороне $B$.
-
-Протокол включает \emph{метки времени} -- информацию о моменте $t_A$ отправки сообщения и моменте получения сообщения $t_B$.
-
-\begin{enumerate}
-    \item Сторона $A$ вырабатывает $K$, с помощью долговременного ключа $K_{AB}$ создаёт шифрованное сообщение с меткой времени $t_A$ и передаёт его стороне $B$:
-            \[ A \rightarrow B: ~ E_{K_{AB}}(K, t_A). \]
-    \item Сторона $B$ получает сообщение и расшифровывает его с помощью общего ключа:
-            \[ D_{K_{AB}}( E_{K_{AB}}( K, t_A)) = (K, t_A). \]
-        В результате $B$ получает $(K, t_A)$, то есть секретный ключ и метку времени. $B$ измеряет время прихода $t_B$ и интервал запаздывания. Если $|t_B - t_A| \leq \delta$, то $B$ аутентифицирует $A$.
-\end{enumerate}
-Метка времени является одноразовой меткой и защищает от атак воспроизведения ранее записанных сообщений.
-
-Рассмотрим другой способ передачи ключа с дополнительной информацией в виде \emph{одноразовых случайных меток} (nonce -- number used once) вместо меток времени. Протокол передачи состоит в следующем.
-
-\begin{enumerate}
-    \item Сторона $A$ вырабатывает случайное число $r_A$, шифрует сообщение, в котором $(r_A, A)$ -- реквизиты $A$, и передаёт его стороне $B$:
-            \[ A \rightarrow B: ~ E_{K_{AB}}(r_A, A). \]
-    \item Сторона $B$ вырабатывает сеансовый ключ $K$, создаёт шифрованное сообщение и посылает его $A$:
-            \[ A \leftarrow B: ~ E_{K_{AB}}(K, r_A, A). \]
-    \item Сторона $A$ расшифровывает полученное сообщение:
-            \[ D_{K_{AB}}( E_{K_{AB}}( K, r_A, A)) = (K, r_A, A). \]
-        В результате $A$ получает сеансовый ключ и подтверждение своих реквизитов, что является дополнительной аутентификацией.
-\end{enumerate}
-
-Предположим, что сторона $B$ тоже желает убедиться, что имеет дело со стороной $A$. Тогда этот протокол следует дополнить передачей реквизитов $B$. По-прежнему считаем, что у $A$ и $B$ общая система шифрования с долговременным секретным ключом $K_{AB}$.
-
-\begin{enumerate}
-    \item Сторона $A$ вырабатывает случайное число $r_A$, шифрует и передаёт стороне $B$ сообщение, в котором $(r_A, A)$ -- реквизиты $A$:
-            \[ A \rightarrow B: ~ E_{K_{AB}}(r_A, A). \]
-    \item Сторона $B$ вырабатывает случайное число $r_B$ и отправляет стороне $A$ зашифрованное сообщение:
-            \[ A \leftarrow B: ~ E_{K_{AB}}(K_B, r_B, r_A, A), \]
-        где $K_B$ -- ключ $B$.
-     \item Сторона $A$ осуществляет расшифрование:
-            \[ D_{K_{AB}}(E_{K_{AB}}(K_B, r_B, r_A, A)) = (K_B, r_B, r_A, A), \]
-        и получает ключ $K_B$ и реквизиты $r_B, r_A, A$. Для аутентификации себя сторона $A$ создаёт свой ключ $K_A$ и отправляет стороне $B$ шифрованное сообщение:
-            \[ A \rightarrow B: ~ E_{K_{AB}}(K_A, r_B, r_A, B). \]
-     \item Сторона $B$ осуществляет расшифрование:
-            \[ D_{K_{AB}}(E_{K_{AB}}(K_A, r_B, r_A, B)) = (K_A, r_B, r_A, B), \]
-        которое определяет ключ $K_A$ и аутентифицирует $A$.
-\end{enumerate}
-
-Таким образом, обе стороны имеют в своём распоряжении ключи $K_A, K_B$ в качестве сеансовых секретных ключей.
-
-\subsection{Протокол с ключевым кодом аутентификации}
-
-При использовании хэш-функции $K = h(K_{A} ~\|~ K_{B})$ происходит усиление секретности. Здесь $(K_{A} ~\|~ K_{B})$ -- конкатенация $K_{A} $ и $K_{B}$.
-
-% Достоинства: предположим, $K_{A} ,K_{B} $ -- не обладают «хорошими» свойствами случайности (биты распределены неравномерно или зависимы друг от друга), то есть, $P_{K_{A} ,K_{B} } (0)=\frac{1}{2} -\varepsilon $, где $\varepsilon $ - мало, но не 0. Тогда вероятность того, что этот бит в \emph{K }будет равным нулю, $P_{K} (0)=\frac{1}{2} -\varepsilon ',\varepsilon '<\varepsilon $- усиление секретности.
-
-Вычисление хэш-значения, как правило, выполняется быстрее, чем расшифрование. Поэтому были разработаны протоколы, в которых вместо функции шифрования используется имитовставка\index{имитовставка} на основе хэш-функции ($\MAC_K$). Рассмотрим протокол такого рода.
-\begin{enumerate}
-    \item Сторона $A$ вырабатывает сеансовый ключ $K$, создаёт сообщение, используя одноразовую метку $t_{A}$, и пересылает его стороне $B$:
-            \[ A \rightarrow B: ~ t_A, ~ B, ~ K \oplus \MAC_{K_{AB}}( t_A, B), ~ \MAC_{K_{AB}}(K, t_A, B). \]
-    \item Сторона $B$ вычисляет
-            \[ \MAC_{K_{AB}}(t_A, B) \oplus K \oplus \MAC_{K_{AB}}(t_A, B) = K \]
-        и получает сеансовый ключ $K$.
-\end{enumerate}
-
-Заметим, что криптоаналитик может добавить в поле случайную последовательность, тогда вместо $K$ получаем <<$K$ плюс помеха>>. Вмешательство криптоаналитика будет выявлено благодаря наличию четвёртого поля в сообщении. Используя полученное значение $K$, вычисляют $\MAC_{K_{AB}}(K, t_A, B)$ и сравнивают с четвёртым полем. Если значения совпадают, то вмешательства криптоаналитика не было.
-
-\input{needham-schroeder_protocol}
+\input{key_distribution-simmetric}
 
 \input{three-pass_protocols}
 
