--- a/needham-schroeder_protocol.tex
+++ b/needham-schroeder_protocol.tex
@@ -1,28 +1,39 @@
-\subsection{Протокол Нидхема~---~Шрёдера с доверенным центром}\index{протокол!Нидхема~---~Шрёдера}
+\subsection{Протокол Нидхема~---~Шрёдера}\index{протокол!Нидхема~---~Шрёдера|(}
 \selectlanguage{russian}
 
-Рассмотрим ситуацию, когда в сети имеется некоторый надёжный (доверенный) сервер (центр) $T$, которому доверяют все пользователи сети. Сервер для работы с абонентами сети использует некоторую систему шифрования $E_S(*)$, где ключ $S=K_{AT}$ известен только $A$ и $T$, но неизвестен остальным участникам сети, $S = K_{BT}$ известен только $B$ и $T$. Предполагаем, что сервер имеет хороший генератор случайных чисел. Сеансовый ключ сервер вырабатывает по запросу. Стороны $A$ и $B$ могут выбирать разные одноразовые метки.
+Протокол Нидхема~---~Шрёдера (\langen{Roger Needham, Michael Shroeder}, 1979,~\cite{Needham:Schroeder:1978}) похож на модифицированный протокол Wide-Mouth Frog, но отличается тем, что доверенный центр (Трент) во время работы основной части протокола не общается со вторым абонентом. Первый абонент получает от доверенного центра специальный пакет, который он без всякой модификации отправляет второму абоненту.
 
-Приведём в качестве примера упрощённую версию известного \emph{протокола Нидхема~---~Шрёдера} (Needham~---~Schroeder) с симметричным шифром.
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=0.5\textwidth]{pic/key_distribution-needham-schroeder}
+    \caption{Схема взаимодействия абонентов и довереного центра в протоколе Нидхема~---~Шрёдера\label{fig:key_distribution-needham-schroeder}}
+\end{figure}
+
 \begin{enumerate}
-    \item Сторона $A$ передаёт серверу $T$ реквизиты сторон $A$ и $B$ и некую одноразовую метку $N_A$, которая может быть, например, меткой времени или случайным (одноразовым) числом, что оговаривается заранее:
-            \[ A \rightarrow T: ~ A, B, N_A. \]
-    \item Сервер $T$ вырабатывает секретный сеансовый ключ $K$ для $A$ и $B$ и отправляет стороне $A$ шифрованное сообщение:
-            \[ A \leftarrow T: ~ E_{K_{AT}}(N_A, B, K, E_{K_{BT}}(K, A)). \]
-    \item Сторона $A$ расшифровывает сообщение:
-            \[ D_{K_{AT}}( E_{K_{AT}}(N_A, B, K, E_{K_{BT}}(K, A))) = (N_A, B, K, E_{K_{BT}}(K, A)) \]
-        и, чтобы доставить ключ, передаёт стороне $B$ сообщение:
-            \[ A \rightarrow B: ~ E_{K_{BT}}(K, A). \]
-    \item Сторона $B$ расшифровывает полученное сообщение:
-            \[ D_{K_{BT}}( E_{K_{BT}}( K,A)) = (K,A) \]
-        и получает ключ и реквизиты $A$, которые требуются для того, чтобы сторона $B$ знала, кому отвечать. Кроме того, сторона $B$ дополнительно желает идентифицировать сторону $A$. Для этого $B$ пересылает $A$ зашифрованную одноразовую метку:
-            \[ A \leftarrow B: ~ E_{K}(N_B). \]
-    \item Сторона $A$ расшифровывает:
-            \[ D_K( E_K( N_B)) = N_B \]
-        и возвращает $B$ изменённую одноразовую метку:
-            \[ A \rightarrow B: ~ E_K(N_B + 1). \]
-    \item Сторона $B$ расшифровывает:
-            \[ D_K( E_K( N_B + 1)) = N_B + 1, \]
-        проверяет $N_B$ и убеждается, что имеет дело со стороной $A$.
-    \item Если требуется двусторонняя аутентификация, то аналогично поступают со стороной $A$: на некотором этапе вносится одноразовая метка $N_A$.
+	\item $ Alice	\rightarrow \{ A, B, R_A \}						\rightarrow Trent $
+	\item $ Trent	\rightarrow \{ E_A \left( R_A, B, K, E_B \left( K, A \right) \right) \}	\rightarrow Alice $
+	\item $ Alice	\rightarrow \{ E_B \left( K, A \right) \}				\rightarrow Bob $
+	\item $ Bob	\rightarrow \{ E_K \left( R_B \right) \}				\rightarrow Alice $
+	\item $ Alice	\rightarrow \{ E_K \left( R_B - 1 \right) \}				\rightarrow Bob $
 \end{enumerate}
+
+Протокол обеспечивает и двустороннюю аутентификацию сторон, и, казалось бы, защиту от атак с повторной передачей (\langen{replay attack}). Последнее делается с помощью введения уже известных по модифицированному протоколу Wide-Mouth From случайных меток $R_A$ и $R_B$. Действительно, без знания ключа злоумышленник не сможет выдать себя за Алису перед Бобом (так как не сможет расшифровать пакет с зашифрованной меткой $R_B$). Однако, как мы договорились ранее во введении к этой главе, сам сессионный ключ не может считаться надёжным длительное время. Если злоумышленник сумеет в какой-то момент времени получить ранее использованный сессионный ключ $K$, он сможет убедить Боба, что он является Алисой, и что это новый сессионный ключ. Для этого ему понадобится переданный ранее по открытому каналу пакет из пункта 3 протокола.
+
+\begin{enumerate}
+	\item $ Eva		\rightarrow \{ A, B, R_A \}						\rightarrow Trent $
+	\item $ Trent		\rightarrow \{ E_A \left( R_A, B, K, E_B \left( K, A \right) \right) \}	\rightarrow Alice $
+	\item $ Alice		\rightarrow \{ E_B \left( K, A \right) \}				\rightarrow Bob $
+	\item $ Bob		\rightarrow \{ E_K \left( R_B \right) \}				\rightarrow Alice $
+	\item $ Alice		\rightarrow \{ E_K \left( R_B - 1 \right) \}				\rightarrow Bob $
+
+		$\dots$ по прошествии некоторого времени $\dots$\\
+	\item $ Eva~(Alice)	\rightarrow \{ E_B \left( K, A \right) \}				\rightarrow Bob $
+	\item $ Bob		\rightarrow \{ E_K \left( R_B \right) \}				\rightarrow Eva~(Alice) $
+	\item $ Eva (Alice)	\rightarrow \{ E_K \left( R_B - 1 \right) \}				\rightarrow Bob $
+\end{enumerate}
+
+Относительно мелкий недостаток протокола состоит ещё и в том, что во втором пакете доверенный центр в зашифрованном виде передаёт то, что в третьем шаге пересылается по открытому каналу ($E_B \left( K, A \right)$).
+
+Если в протокол добавить метки времени, тем самым ограничив время возможного использования сессионного ключа, а также исправить мелкий недостаток с двойным шифрованием, можно получить протокол, который лежит в основе распространённого средства аутентификации <<Kerberos>> для локальных сетей.
+
+\index{протокол!Нидхема~---~Шрёдера|)}
