--- a/bibliography.bib
+++ b/bibliography.bib
@@ -230,6 +230,7 @@
 	volume		= {I},
 	year		= {1973},
 	url		= {http://www.albany.edu/acc/courses/ia/classics/belllapadula1.pdf},
+	language	= {English},
 }
 
 @techreport{Bell:LaPadula:1976,
@@ -243,6 +244,7 @@
 	title		= {Secure Computer System: Unified Exposition and MULTICS Interpretation},
 	url		= {http://csrc.nist.gov/publications/history/bell76.pdf},
 	year		= {1976}
+	language	= {English},
 }
 
 @ARTICLE{Diffie:Hellman:1976,
@@ -301,6 +303,26 @@
 	doi		= {10.1145/359340.359342},
 	language	= {English},
 }
+
+@article{Needham:Schroeder:1978,
+	author		= {Needham, Roger M. and Schroeder, Michael D.},
+	title		= {Using Encryption for Authentication in Large Networks of Computers},
+	journal		= {Commun. ACM},
+	issue_date	= {Dec. 1978},
+	volume		= {21},
+	number		= {12},
+	month		= {12},
+	year		= {1978},
+	issn		= {0001-0782},
+	pages		= {993--999},
+	numpages	= {7},
+	url		= {http://doi.acm.org/10.1145/359657.359659},
+	doi		= {10.1145/359657.359659},
+	acmid		= {359659},
+	publisher	= {ACM},
+	address		= {New York, NY, USA},
+	keywords	= {authentication, data encryption standard, encryption, networks, protocols, public-key cryptosystems, security},
+} 
 
 @article{Shamir:1979,
 	author		= {Shamir, Adi},
@@ -387,21 +409,6 @@
 	language	= {English},
 }
 
-@inproceedings{ElGamal:1985,
-	author		= {El Gamal, Taher},
-	title		= {A Public Key Cryptosystem and a Signature Scheme Based on Discrete Logarithms},
-	booktitle	= {Proceedings of CRYPTO 84 on Advances in Cryptology},
-	address		= {New York, NY, USA},
-	location	= {Santa Barbara, California, USA},
-	publisher	= {Springer-Verlag New York, Inc.},
-	year		= {1985},
-	pages		= {10--18},
-	numpages	= {9},
-	isbn		= {0-387-15658-5},
-	url		= {http://dl.acm.org/citation.cfm?id=19478.19480},
-	language	= {English},
-}
-
 @inproceedings{Blom:1984,
 	author		= {Blom, Rolf},
 	title		= {An Optimal Class of Symmetric Key Generation Systems},
@@ -414,6 +421,21 @@
 	pages		= {335--338},
 	numpages	= {4},
 	doi		= {10.1007/3-540-39757-4_22},
+	language	= {English},
+}
+
+@inproceedings{ElGamal:1985,
+	author		= {El Gamal, Taher},
+	title		= {A Public Key Cryptosystem and a Signature Scheme Based on Discrete Logarithms},
+	booktitle	= {Proceedings of CRYPTO 84 on Advances in Cryptology},
+	address		= {New York, NY, USA},
+	location	= {Santa Barbara, California, USA},
+	publisher	= {Springer-Verlag New York, Inc.},
+	year		= {1985},
+	pages		= {10--18},
+	numpages	= {9},
+	isbn		= {0-387-15658-5},
+	url		= {http://dl.acm.org/citation.cfm?id=19478.19480},
 	language	= {English},
 }
 
@@ -500,6 +522,24 @@
 	publisher	= {ACM},
 	address		= {New York, NY, USA},
 	doi		= {10.1145/66093.66095},
+	language	= {English},
+}
+
+@article{Burrows:Abadi:Needham:1989,
+	author		= {Burrows, Michael and Abadi, Martin and Needham, Roger},
+	title		= {A Logic of Authentication},
+	journal		= {ACM Trans. Comput. Syst.},
+	issue_date	= {Feb. 1990},
+	volume		= {8},
+	number		= {1},
+	month		= feb,
+	year		= {1990},
+	issn		= {0734-2071},
+	pages		= {18--36},
+	numpages	= {19},
+	doi		= {10.1145/77648.77649},
+	publisher	= {ACM},
+	address		= {New York, NY, USA},
 	language	= {English},
 }
 
@@ -667,10 +707,35 @@
 	language	= {Russian},
 }
 
+@Inbook{Anderson:Needham:1995,
+	author		= {Anderson, Ross and Needham, Roger},
+	editor		= {van Leeuwen, Jan},
+	title		= {Programming Satan's computer},
+	bookTitle	= {Computer Science Today: Recent Trends and Developments},
+	year		= {1995},
+	publisher	= {Springer Berlin Heidelberg},
+	address		= {Berlin, Heidelberg},
+	pages		= {426--440},
+	isbn		= {978-3-540-49435-5},
+	doi		= {10.1007/BFb0015258},
+	language	= {English},
+}
+
 @MISC{Entacher:1997,
 	author		= {Entacher, Karl},
 	title		= {A Collection of Selected Pseudorandom Number Generators with Linear Structures},
 	year		= {1997},
+	language	= {English},
+}
+
+@techreport{Lowe:1997,
+	author		= {Lowe, Gavin},
+	institution	= {University of Leicester},
+	journal		= {Technical Report 1997/5},
+	location	= {Leicester},
+	title		= {A Family of Attacks upon Authentication Protocols},
+	year		= {1997},
+	url		= {http://www.cs.ox.ac.uk/gavin.lowe/Security/Papers/multiplicityTR.ps},
 	language	= {English},
 }
 
