Исправление ссылок на библиографию

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -243,7 +243,7 @@
 	priority	= {3},
 	title		= {Secure Computer System: Unified Exposition and MULTICS Interpretation},
 	url		= {http://csrc.nist.gov/publications/history/bell76.pdf},
-	year		= {1976}
+	year		= {1976},
 	language	= {English},
 }
 
@@ -525,7 +525,7 @@
 	language	= {English},
 }
 
-@article{Burrows:Abadi:Needham:1989,
+@article{Burrows:Abadi:Needham:1990,
 	author		= {Burrows, Michael and Abadi, Martin and Needham, Roger},
 	title		= {A Logic of Authentication},
 	journal		= {ACM Trans. Comput. Syst.},
