Унификация оформления предметного указателя и исключение дублирования элементов

--- a/DES.tex
+++ b/DES.tex
@@ -1,7 +1,7 @@
 \section{Шифр DES}\index{шифр!DES|(}
 \selectlanguage{russian}
 
-Развитием проекта <<Люцифер>> стал государственный стандарт США, известный как DES (\langen{data encryption standard}). Это первый из рассматриваемых нами блочных шифров, который имеет ярко выраженные раунды шифрования, отдельно выделенную функцию ключевого расписания и основан на классической ячейке Фейстеля\index{ячейка Фейстеля}. Поэтому для знакомства с шифром достаточно рассмотреть устройство функции Фейстеля\index{функция!Фейстеля} как основного элемента, отличающего данный шифр от аналогичных.
+Развитием проекта <<Люцифер>>\index{шифр!Люцифер} стал государственный стандарт США, известный как DES (\langen{data encryption standard}). Это первый из рассматриваемых нами блочных шифров, который имеет ярко выраженные раунды шифрования, отдельно выделенную функцию ключевого расписания и основан на классической ячейке Фейстеля\index{ячейка Фейстеля}. Поэтому для знакомства с шифром достаточно рассмотреть устройство функции Фейстеля\index{функция!Фейстеля} как основного элемента, отличающего данный шифр от аналогичных.
 
 В шифре DES открытый текст делится на блоки по 32 бита, и они обрабатываются в 16-ти раундах. Раундовые ключи генерируются из исходных 64 бит ключа (при этом значащими являются только 56 бит, а последние 8 бит используются для проверки корректности ввода ключа). На вход функции Фейстеля для шифра DES, схема которой приведена на рисунке~\ref{fig:des}, подаётся половина от размера входного блока -- 32 бита.
 
