--- a/GOST_R_34.12-2015.tex
+++ b/GOST_R_34.12-2015.tex
@@ -1,4 +1,4 @@
-\section{Шифр «Кузнечик»}\label{section-grig}\index{шифр!«Кузнечик»|(}
+\section{Шифр «Кузнечик»}\label{section-grig}\index{шифр!Кузнечик|(}
 \selectlanguage{russian}
 
 В июне 2015 года в России был принят новый стандарт блочного шифрования ГОСТ Р 34.12-2015~\cite{GOST-R:34.12-2015}. Данный стандарт включает в себя два блочных шифра -- старый ГОСТ 28147-89, получивший теперь название <<Магма>>, и новый шифр со 128-битным входным блоком, получившим название <<Кузнечик>>.
@@ -56,4 +56,4 @@
 
 В работе 2015 года Бирюков, Перрин и Удовенко (\langen{Alex Biryukov, Léo Perrin, Aleksei Udovenko},~\cite{Biryukov:Perrin:Udovenko:2015}) продемонстрировали, что структура s-блока не является случайной, а получена в результате работы детерминированного алгоритма. Это может быть использовано для создания более быстрых реализаций алгоритма шифрования, но теоретически может быть и основой для атак на шифр.
 
-\index{шифр!«Кузнечик»|)}
+\index{шифр!Кузнечик|)}
