--- a/lucifer.tex
+++ b/lucifer.tex
@@ -1,4 +1,4 @@
-\section{SP-сети. Проект «Люцифер»}\label{section-project-lucifer}\index{шифр!«Люцифер»|(}
+\section{SP-сети. Проект «Люцифер»}\label{section-project-lucifer}\index{шифр!Люцифер|(}
 \selectlanguage{russian}
 
 В 1973 году в \foreignlanguage{english}{"Scientific American"} появилась статья сотрудника IBM (а ранее -- ВМС США) Хорста Фейстеля (\langen{Horst Feistel}) <<Cryptography and Computer Privacy>>~\cite{Feistel:1973}, описывающая проект функции шифрования <<Люцифер>>, который можно считать прообразом современных блочных шифров. Развитием данной системы стал государственный стандарт США <<Digital Encryption Standard>> с 1979 по 2001 годы.
@@ -36,4 +36,4 @@
 
 Разделение функции шифрования на относительно простые раунды (<<слои>>), комбинация больших p-блоков со множеством s-блоков малого размера -- всё это до сих пор используется в современных блочных шифрах.
 
-\index{шифр!«Люцифер»|)}
+\index{шифр!Люцифер|)}
