+Илья Улитин to foreword

--- a/foreword.tex
+++ b/foreword.tex
@@ -100,6 +100,7 @@
 	\item[] Татьяна Тюпина\begin{tiny} (201-116 гр.)\end{tiny}
 
 	\item[] Сергей Угрюмов\begin{tiny} (201-119 гр.)\end{tiny}
+	\item[] Илья Улитин\begin{tiny} (201-417 гр.)\end{tiny}
 
 	\item[] Марсель Файзуллин\begin{tiny} (201-114 гр.)\end{tiny}
 	\item[] Нияз Фазлыев\begin{tiny} (201-114 гр.)\end{tiny}
