--- a/ipsec.tex
+++ b/ipsec.tex
@@ -1,7 +1,7 @@
 \section{Защита IPsec на сетевом уровне}
 \selectlanguage{russian}
 
-Набор протоколов IPsec (\langen{Internet Protocol Security})\index{протокол!IPsec}~\cite{rfc4301} является неотъемлемой частью IPv6\index{протокол!IPv6} и дополнительным необязательным расширением IPv4. IPsec обеспечивает защиту данных на сетевом уровне IP-пакетов.
+Набор протоколов IPsec (\langen{Internet Protocol Security})\index{протокол!IPsec}~\cite{RFC4301} является неотъемлемой частью IPv6\index{протокол!IPv6} и дополнительным необязательным расширением IPv4. IPsec обеспечивает защиту данных на сетевом уровне IP-пакетов.
 
 IPsec определяет:
 \begin{itemize}
@@ -17,7 +17,7 @@ IPsec определяет:
 
 %http://www.ietf.org/rfc/rfc4306.txt
 
-Протокол IKE версии 2 (\langen{Internet Key Exchange})\index{протокол!IKE}~\cite{rfc4306}, по существу, можно описать следующим образом. Пусть $I$ -- инициатор соединения, $R$ -- отвечающая сторона.
+Протокол IKE версии 2 (\langen{Internet Key Exchange})\index{протокол!IKE}~\cite{RFC4306}, по существу, можно описать следующим образом. Пусть $I$ -- инициатор соединения, $R$ -- отвечающая сторона.
 
 Протокол состоит из двух фаз. Первая фаза очень похожа на установление соединения в SSL/TLS: она включает возможный обмен сертификатами $C_I, C_R$ стандарта X.509 для аутентификации (или альтернативную аутентификацию по общему заранее созданному секретному ключу) и создание общих предварительных сеансовых ключей протокола IKE по протоколу Диффи~---~Хеллмана\index{протокол!Диффи~---~Хеллмана}. Сеансовые ключи протокола IKE служат для шифрования и аутентификации сообщений второй фазы. Вторая фаза создаёт сеансовые ключи для протоколов ESP, AH, то есть ключи для шифрования конечных данных. Сообщения второй фазы также используются для смены ранее созданных сеансовых ключей, и в этом случае протокол сразу начинается со второй фазы с применением ранее созданных сеансовых ключей протокола IKE.
 
