Fix incorrect definitions

--- a/chinese_remainder_theorem.tex
+++ b/chinese_remainder_theorem.tex
@@ -24,7 +24,7 @@
 		a_i = a \mod n_i, \\
 		b_i = b \mod n_i, \\
 		c_i = c \mod n_i
-	\end{array}: \\
+	\end{array} \Rightarrow \\
 	\left( c \equiv a + b \mod n \right) \Leftrightarrow \left( c_i \equiv a_i + b_i \mod n_i, i = 1, \dots, k \right), \\
 	\left( c \equiv a \times b \mod n \right) \Leftrightarrow \left( c_i \equiv a_i \times b_i \mod n_i, i = 1, \dots, k \right).
 \end{array} \]
