Fix Hadamard and de la Vallée Poussin cite refs

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,6 +7,28 @@
 	language	= {German},
 }
 
+@article{Hadamard:1896,
+	author		= {Hadamard, J.},
+	journal		= {Bulletin de la Société Mathématique de France},
+	language	= {fre},
+	pages		= {199-220},
+	publisher	= {Société mathématique de France},
+	title		= {Sur la distribution des zéros de la fonction $\zeta (s)$ et ses conséquences arithmétiques},
+	url		= {http://eudml.org/doc/85858},
+	volume		= {24},
+	year		= {1896},
+}
+
+@article{ValleePoussin:1896,
+	author		= {de la Vallée Poussin, C.-J.},
+	journal		= {Ann. Soc. scient. Bruxelles},
+	language	= {fre},
+	pages		= {183-256},
+	title		= {Recherches analytiques la théorie des nombres premiers},
+	volume		= {20},
+	year		= {1896},
+}
+
 @book{Friedman:1922,
 	author		= {Friedman, William Frederick},
 	title		= {The Index of Coincidence and Its Applications in Cryptology},
