--- a/prime_numbers_count.tex
+++ b/prime_numbers_count.tex
@@ -3,7 +3,7 @@
 \selectlanguage{russian}
 
 Функция $\pi(n)$ определяется как количество простых\index{число!простое} чисел из диапазона $[2, n]$.
-Существует предел~\cite{Hadamard:1896}, ~\cite{de la Vallée-Poussin:1896}
+Существует предел~\cite{Hadamard:1896, ValleePoussin:1896}
     \[ \lim\limits_{n \rightarrow \infty}\frac{ \pi(n)}{ \frac{n}{\ln n}}=1. \]
 
 Для $n \geq 17$ верно неравенство $\pi(n) > \frac{n}{\ln n}$.
