Fix Hadamard and de la Vallée Poussin cite refs

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -20,7 +20,7 @@
 }
 
 @article{ValleePoussin:1896,
-	author		= {de la Vallée Poussin, C.-J.},
+	author		= {de la Vallée-Poussin, Charles Jean},
 	journal		= {Ann. Soc. scient. Bruxelles},
 	language	= {fre},
 	pages		= {183-256},
