--- a/foreword.tex
+++ b/foreword.tex
@@ -80,7 +80,7 @@
 	\item[] Егор Макарычев\begin{tiny} (201-115 гр.)\end{tiny}
 	\item[] Иван Макеев\begin{tiny} (201-212 гр.)\end{tiny}
 	\item[] Ольга Малюгина\begin{tiny} (201-111 гр.)\end{tiny}
-	\item[] Алексей Мамаков\begin{tiny} (201-113 гр.)\end{tiny}
+	\item[] Алексей Мамаков\begin{tiny} (201-113 гр.)\end{tiny} %AlekseyMamakov
 	\item[] Роман Маракулин\begin{tiny} (201-211 гр.)\end{tiny}
 	\item[] Андрей Мартыненко\begin{tiny} (201-312 гр.)\end{tiny}
 	\item[] Александр Матков\begin{tiny} (201-314 гр.)\end{tiny} %alexmatkov
