Add @NiyazFazliev nickname

--- a/foreword.tex
+++ b/foreword.tex
@@ -126,7 +126,7 @@
 	\item[] Илья Улитин\begin{tiny} (201-417 гр.)\end{tiny}
 
 	\item[] Марсель Файзуллин\begin{tiny} (201-114 гр.)\end{tiny}
-	\item[] Нияз Фазлыев\begin{tiny} (201-114 гр.)\end{tiny}
+	\item[] Нияз Фазлыев\begin{tiny} (201-114 гр.)\end{tiny} %NiyazFazliev
 	\item[] Наталья Федотова\begin{tiny} (201-212 гр.)\end{tiny}
 	\item[] Данил Филиппов\begin{tiny} (201-115 гр.)\end{tiny}
 
