--- a/prime-check-naive.tex
+++ b/prime-check-naive.tex
@@ -1,7 +1,7 @@
 \subsection{<<Наивный>> тест}\label{section-prime-check-naive}
 \selectlanguage{russian}
 
-<<Наивный>> тест состоит в проверке того, что число $n$ не делится на числа от $2$ до $\sqrt{n}$. Из определения простоты\index{число!простое} числа следует, что алгоритм будет являться корректным. Также очевидно, что алгоритм будет являться неполиномиальным относительно битовой длины числа $n$. Однако на нём хорошо показать определение <<свидетеля простоты>>, которое будет использоваться в алгоритмах в дальнейшем.
+<<Наивный>> тест состоит в проверке того, что число $n$ не делится на числа от $2$ до $\sqrt{n}$. Из определения простоты\index{число!простое} числа следует, что алгоритм будет являться корректным. Также очевидно, что алгоритм будет являться неполиномиальным относительно битовой длины числа $n$. Однако на нём можно удачно проиллюстрировать определение <<свидетеля простоты>>, которое будет использоваться в алгоритмах в дальнейшем.
 
 Будем называть число $a$ \emph{свидетелем простоты числа $n$ по наивному алгоритму}, если выполняется условие
 \[
